css/styles.css
/* ... */
a {
    color: #0968DE;
}
img {
    max-width: 100%;
}
.btn {
    background-color: #0B6D88;
    color: #FFFFFF;
    border-radius: .2rem;
    -moz-border-radius: .2rem;
    -webkit-border-radius: .2rem;
    text-align: center;
    text-transform: capitalize;
    padding: .9rem 2rem;
    box-sizing: border-box;
}
.btn--secondary {
    color: #0B6D88;
    border: .2rem solid #0B6D88;
    background-color: transparent;
}
.btn--sm {
    padding: .5rem 1rem;
}
.btn:hover {
    background-color: #888888;
    border-color: #888888;
    color: #FFFFFF;
}
.btn-group a {
    border: 1px solid #000000;
    margin: 0;
    float: left;
    min-width: 10rem;
    text-align: center;
    height: 2.9rem;
    line-height: 2.9rem;
    margin-left: -.1rem;
    color: #000000;
}
.btn-group a:hover {
    cursor: pointer;
    border-color: #888888;
    background-color: #888888;
    color: #FFFFFF;
}
.btn-group a:first-of-type {
    border-radius: .2rem 0 0 .2rem;
}
.btn-group a:last-of-type {
    border-radius: 0 .2rem .2rem 0;
}
.btn-group .selected {
    background-color: #000000;
    color: #ffffff;
}
ul {
    padding-left: 2rem;
    margin: 1rem 0 1rem 0;
}
.toc {
    padding: 0;
    list-style: none;
    text-transform: uppercase;
    margin-bottom: 5rem;
}
.toc li {
    margin-bottom: .5rem;
}
.toc > li {
    margin-bottom: .6rem;
}
.toc a {
    color: #000000;
}
.toc ul {
    padding: .5rem 1.7rem 0;
    text-transform: none;
    font-weight: 400;
    margin: 0 0 2rem;
}
.toc a:hover,
.toc ul a {
    color: #0B6D88;
}
.toc ul ul {
    padding: 0 1.8rem;
    margin-bottom: 0;
}
ol.toc {
    list-style: decimal;
    padding: 0 0 0 2rem;
}
ol.toc > li {
    padding-left: .2rem;
}
.data-table {
    display: block;
    border: none;
    border-collapse: collapse;
    width: 100%;
    overflow-x: scroll;
    margin: 2rem 0;
}
.data-table tbody {
    border-style: solid;
    border-color: #E5E5E5;
    border-width: 0 .5rem;
}
.data-table td,
.data-table th {
    border: .1rem solid #cccccc;
    padding: .5rem 1rem;
    min-width: 10rem;
}
.data-table th {
    text-align: left;
    background-color: #000000;
    border: .1rem solid #222222;
    color: #ffffff;
    font-weight: 400;
    padding: 1rem;
    text-transform: uppercase;
    overflow: hidden;
}
.data-table td {
    /* These are technically the same, but use both */

    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-word-break: break-all;
    /* This is the dangerous one in WebKit, as it breaks things wherever */

    word-break: break-all;
    /* Instead use this non-standard one: */

    word-break: break-word;
    /* Adds a hyphen where the word breaks, if supported (No Blink) */

    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
}
.data-table tr td:first-of-type {
    -ms-hyphens: none;
    -moz-hyphens: none;
    -webkit-hyphens: none;
    hyphens: none;
}

table.docutils  {
    border-collapse: collapse;
    border-spacing: 0;
    empty-cells: show;
    background-color: transparent;
    table-layout: fixed; width: 100%;
    font-size:1.5rem;
    line-height: 1.8;
}

td {
    border: 1px solid #e1e4e5;
    margin: 0;
    padding: 16px;
    overflow: hidden;
    width: 200px;
}

th {
    border: 1px solid #e1e4e5;
    margin: 0;
    overflow: visible;
    padding: 8px 16px;
    text-align:left;
    background-color:#ccc;
}

tr:nth-child(even) {
    background-color: #f2f2f2;
}

/* Configuration lists */
.config-list>li {
    list-style-type: none;
    padding: 15px 0px 15px 20px;
    border-bottom: 1px solid black;
}

.config-list h4 {
    margin: 0;
}

.config-list table *{
    border: 0;
    background-color: transparent;
    padding: 0;
}

.config-list tr {
    border-width: 0;
    background-color: transparent;
}

.config-list th {
    text-align: right;
}

.config-list td {
    text-align: left;
    padding: 0px 0px 0px 10px;
}

.config-list>li:nth-child(odd) {
    background: #f2f2f2;
}

.horizontal-list li {
    display: inline-block;
}

.horizontal-list li:before {
    content: '\00a0\00a0\2015\00a0';
}

.horizontal-list li:first-child:before {
    content: '';
}

.highlight pre span {
    font-size:1.4rem;
}

/* helper classes */

.centered {
    display: block;
    margin: auto;
}
.pb-10 {
    display: inline-block;
    padding-bottom: 1rem;
}
/* components */

.main {
    width: auto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.header {
    padding: 2rem 0 1rem;
    background-color: #FFFFFF;
    position: fixed;
    left: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding: 2rem 2.2rem;
    width: 100%;
    box-sizing: border-box;
    margin: 0 auto;
    z-index: 99;
    transition: box-shadow 0.5s;
}
.header.scrolled {
    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.38);
    margin: 0;
    padding: 0.5rem 2.2rem;
}
.burger-toggle {
    padding: .4rem;
    border-radius: .3rem;
    width: 4rem;
    height: 4rem;
    border: 1px solid #ccc;
    background-color: white;
}
.burger-toggle .burger-line {
    display: block;
    width: 80%;
    margin: 6px auto;
    height: 2px;
    background-color: black;
    border-radius: 2px;
}
.top-nav-toggle {
    display: none;
}
.top-nav-container {
    display: flex;
    box-sizing: border-box;
}
.top-nav {
    font-family: Roboto;
    font-style: normal;
    font-weight: 600;
    font-size: 1.2rem;
    line-height: 14px;
    display: flex;
    align-items: center;
    align-self: center;
    text-align: center;
    letter-spacing: 0.08em;
    text-transform: uppercase;
}
.top-nav-list {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.top-nav-item {
    display: block;
    padding: 0;
    position: relative;
}
.top-nav-item:hover .top-nav-menu,
.top-nav-item:focus .top-nav-menu,
.top-nav-item:active .top-nav-menu {
    display: block;
}
/* ... */

